samples/_failures_safe/1761524252_7e1249_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f676159.c: In function ‘main’:
./samples/SAFE/__tmp_5f676159.c:160:20: error: missing terminating " character
  160 |             printf("  Compression ratio: N
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5f676159.c:160:13: error: expected expression at end of input
  160 |             printf("  Compression ratio: N
      |             ^~~~~~
./samples/SAFE/__tmp_5f676159.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f676159.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f676159.c:160:13: error: expected declaration or statement at end of input
